# unicef-locations

./: .flake8  .gitignore  .isort.cfg  .style.yapf  .travis.yml  CHANGES  LICENSE  MANIFEST.in  Makefile  NEWS.rst  Pipfile  README.rst  manage.py  pyproject.toml  pytest.ini  setup.cfg  setup.py  test.sh  tox.ini
.circleci/: config.yml  test-config.sh
src/requirements/: install.pip  install.txt  test.txt  testing.pip
src/unicef_locations/: __init__.py  admin.py  apps.py  arcgis_tasks.py  auth.py  cache.py  config.py  forms.py  libs.py  models.py  serializers.py  synchronizers.py  task_utils.py  tasks.py  tasks_arcgis.py  tasks_cartodb.py  urls.py  utils.py  views.py
src/unicef_locations/locations/: admin.py  models.py
src/unicef_locations/migrations/: 0001_initial.py  0002_delete_gatewaytype.py  0002_fix_null_values.py  0003_make_not_nullable.py  0004_pcode_remap_related.py  0005_auto_20181206_1127.py  0006_arcgisdbtable.py  0006_auto_20190110_2336.py  0007_auto_20190122_1428.py  0008_arcgisdbtable.py  0008_auto_20190422_1537.py  (+6 more)
tests/: .coveragerc  api_checker.py  conftest.py  test_admin.py  test_api.py  test_config.py  test_forms.py  test_models.py  test_serializers.py  test_synchronizers.py  test_tasks.py  test_utils.py  test_views.py
tests/demoproject/: manage.py
tests/recorder/: test_api-fixture-gateway.pickle  test_api-fixture-location.pickle  test_api-response-locations-light-list-<class 'unicef_locations.serializers.LocationLightSerializer'>.pickle  test_api-response-locations-list-<class 'unicef_locations.serializers.LocationSerializer'>.pickle  test_api-response-locationtypes-list-<class 'unicef_locations.serializers.GatewayTypeSerializer'>.pickle
(+25 files in other folders)
